# hshop_scrapper

./: Cargo.toml
choose_game/: Cargo.toml  index.html
choose_game/src/: main.rs
src/: main.rs
