[package]
name = "choose_game"
version = "0.1.0"
edition = "2021"
# resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.9.0", default-features = false, features = ["wgpu", "tokio", "image"]}
iced_native = {version="0.10.3", default-features = false}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
self_update = { version = "0.36.0", features = ["archive-zip"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
